RESOLVED FIXED21247
transition shorthand is missing delay
https://bugs.webkit.org/show_bug.cgi?id=21247
Summary transition shorthand is missing delay
Dean Jackson
Reported 2008-09-30 11:43:34 PDT
The -webkit-transition shorthand property is not accepting -webkit-transition-delay values. It should.
Attachments
Patch for transition shorthand (4.15 KB, patch)
2008-11-19 17:01 PST, Dean Jackson
koivisto: review+
Dean Jackson
Comment 1 2008-11-19 17:01:43 PST
Created attachment 25291 [details] Patch for transition shorthand Only the testcase relies on dependent bug being fixed. The actual fix does not need it.
Antti Koivisto
Comment 2 2008-11-20 14:01:08 PST
Comment on attachment 25291 [details] Patch for transition shorthand r=me
Simon Fraser (smfr)
Comment 3 2008-11-20 16:44:15 PST
Committed r38644 M WebCore/ChangeLog M WebCore/page/animation/AnimationBase.cpp M LayoutTests/ChangeLog A LayoutTests/transitions/transition-drt-api-delay.html A LayoutTests/transitions/transition-drt-api-delay-expected.txt r38644 = 5f535b9ff8b1ca8c0d663916c65b98c37fc629b9 (trunk)
Simon Fraser (smfr)
Comment 4 2008-11-20 16:44:56 PST
Sorry, wrong bug.
Simon Fraser (smfr)
Comment 5 2008-11-20 16:48:51 PST
Committed r38645 M WebCore/ChangeLog M WebCore/css/CSSParser.cpp M LayoutTests/ChangeLog A LayoutTests/transitions/transition-shorthand-delay.html A LayoutTests/transitions/transition-shorthand-delay-expected.txt r38645 = e5d2c89657c93182b5b771afc446d38045f802f0 (trunk)
Note You need to log in before you can comment on or make changes to this bug.