2008-11-20  Dean Jackson  <dino@apple.com>

Reviewed by Antti Koivisto

        https://bugs.webkit.org/show_bug.cgi?id=21247

        Make transition shorthand property accept transition-delay.

        Test: transitions/transition-shorthand-delay.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseTransitionShorthand):

git-svn-id: svn://svn.chromium.org/blink/trunk@38645 bbb929c8-8fbe-4397-9dbb-9b2b20218538