third_party/WebKit/WebCore/css/CSSParser.cpp
@@ -1795,7 +1795,8 @@ bool CSSParser::parseTransitionShorthand(bool important)
 {
     const int properties[] = { CSSPropertyWebkitTransitionProperty,
                                CSSPropertyWebkitTransitionDuration,
-                               CSSPropertyWebkitTransitionTimingFunction };
+                               CSSPropertyWebkitTransitionTimingFunction,
+                               CSSPropertyWebkitTransitionDelay };
     const int numProperties = sizeof(properties) / sizeof(properties[0]);
     
     ShorthandScope scope(this, CSSPropertyWebkitTransition);
